--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url(//db.onlinewebfonts.com/c/878b30913099dfa56628a43496273ff4?family=Wilson+wells);
+@layer base {
+  :root {
+    --navigation-height: 4.8rem;
+  }
+
+  body {
+    @apply m-0 block bg-orange-50 p-0 text-xs text-black;
+    font-family: "Wilson wells", "Times New Roman", Times, serif;
+  }
+}
+
+@layer utilities {
+  .text-shadow {
+    text-shadow: rgb(0 0 0 / 56%) 0px 3px 12px;
+  }
+
+  .text-gradient {
+    background: linear-gradient(
+      to right bottom,
+      rgb(255, 255, 255) 30%,
+      rgba(255, 255, 255, 0.38)
+    );
+    background-clip: text;
+    color: transparent;
+  }
+
+  .mask-radial-faded {
+    mask-image: radial-gradient(
+      circle at center center,
+      black,
+      transparent 80%
+    );
+  }
+
+  .mask-linear-faded {
+    mask-image: linear-gradient(black, transparent 70%);
+  }
+}
